[project]
name = "rag-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "inngest>=0.5.11",
    "langchain>=1.0.5",
    "langchain-ollama>=1.0.0",
    "llama-index-core>=0.14.8",
    "llama-index-readers-file>=0.5.4",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
